--- a/bower.json
+++ b/bower.json
@@ -6,9 +6,6 @@
     ],
   "homepage": "https://github.com/geometrybase/js-binarypack",
   "ignore": [
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
+    "test"
   ]
 }
